--- a/views/index.pug
+++ b/views/index.pug
@@ -3,3 +3,21 @@ extends layout
 block content
   h1= title
   p Welcome to #{title}
+
+  h2 Books
+    p
+      a.button(href='/books/new') Create New Book
+    table
+      thead
+        tr
+          th Title
+          th Author
+          th Genre
+          th Year
+      tbody
+        tr
+          td
+            a(href='books/:id')
+          td
+          td
+          td
