--- a/views/index.pug
+++ b/views/index.pug
@@ -15,9 +15,10 @@ block content
           th Genre
           th Year
       tbody
+        each book in books
         tr
           td
-            a(href='books/:id')
-          td
-          td
-          td
+            a(href=`/books/${book.id}`)= book.title
+          td= book.author
+          td= book.genre
+          td= book.year
