--- a/views/new-book.pug
+++ b/views/new-book.pug
@@ -16,6 +16,6 @@ block content
             label(for="year") Year
                 input(type="text" name="year" id="year")
         p
-            input(type='submit') Create New Book
+            input(type='submit' value='Create New Book')
         p
             a.button(href='/books') Cancel 
