--- a/views/new-book.pug
+++ b/views/new-book.pug
@@ -5,17 +5,17 @@ block content
     form(action="/books" method="post")
         p
             label(for="title") Title
-                input(type="text" name="title" id="title")
+            input(type="text" name="title" id="title")
         p
             label(for="author") Author
-                input(type="text" name="author" id="author")
+            input(type="text" name="author" id="author")
         p
             label(for="genre") Genre
-                input(type="text" name="genre" id="genre")
+            input(type="text" name="genre" id="genre")
         p
             label(for="year") Year
-                input(type="text" name="year" id="year")
+            input(type="text" name="year" id="year")
         p
-            input(type='submit' value='Create New Book')
+            input.button(type='submit' value='Create New Book')
         p
             a.button(href='/books') Cancel 
