--- a/views/update-book.pug
+++ b/views/update-book.pug
@@ -2,23 +2,23 @@ extends layout
 
 block content
     h1 Update Book
-    form(action=`/books/${book.id}` method="post" onsubmit="return confirm(Do you really want to update the book?)")
+    form(action=`/books/${book.id}/update` method="post" onsubmit="return confirm('Do you really want to update the book?')")
         p
             label(for="title") Title
-                input(type="text" name="title" id="title")
+            input(type="text" name="title" id="title" value=`${book.title}`)
         p
             label(for="author") Author
-                input(type="text" name="author" id="author")
+            input(type="text" name="author" id="author" value=`${book.author}`)
         p
             label(for="genre") Genre
-                input(type="text" name="genre" id="genre")
+            input(type="text" name="genre" id="genre" value=`${book.genre}`)
         p
             label(for="year") Year
-                input(type="text" name="year" id="year")
+            input(type="text" name="year" id="year" value=`${book.year}`)
         p
-            input(type='submit' value="Update Book")
-    form(action=`/books/${book.id}/delete` method="post" onsubmit="return('Do you really want to delete this book')")
+            input.button(type='submit' value="Update Book")
+    form(action=`/books/${book.id}/delete` method="post" onsubmit="return confirm('Do you really want to delete this book?')")
         p
             a.button(href='/books') Cancel
         p
-            input(type='submit' value="Delete Book")
+            input.button(type='submit' value="Delete Book")
