--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,10 @@ extends layout
 
 block content
   h1 Books
+  form(action="/books/search" method="post")
+    span
+      input(name="search" type="search" placeholder="Search books")
+      input.button(type='submit' value='Search')
   p
     a.button(href='/books/new') Create New Book
   table
